--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -154,6 +154,7 @@ function removeHelpers() {
 let circle;
 let startGap;
 let popupTimer = null;
+let keepPopupsOpen;
 
 const preventTextSelection = e=>e.preventDefault();
 
