--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -211,6 +211,7 @@ function undo() {
   history_pos -= 1;
   settings.remap.controlPoints = history[history_pos];
   updateMarkers();
+  saveSettings();
 }
 
 function redo() {
@@ -218,6 +219,7 @@ function redo() {
   history_pos += 1;
   settings.remap.controlPoints = history[history_pos];
   updateMarkers();
+  saveSettings();
 }
 
 function saveSettings() {
